# permafrost

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.json  docker-compose.yaml  launcher.py  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
channels/: __init__.py  base.py  discord.py  line.py  telegram.py  web.py
console/: app.py  i18n.py
core/: __init__.py  agents.py  brain.py  compactor.py  guard.py  hooks.py  mcp_client.py  multi_agent.py  notifier.py  plugins.py  provider_fallback.py  providers.py  scheduler.py  security.py  token_tracker.py  tools.py  watchdog.py
plugins/example_plugin/: __init__.py  plugin.json
smart/: __init__.py  default_prompt.py  default_schedule.py  evolution.py  handover.py  memory.py  night_silence.py  persona_wizard.py  pitfalls.py  reflection.py  rules_template.py  vector.py
tests/: __init__.py  conftest.py  test_brain.py  test_channels.py  test_e2e.py  test_guard.py  test_handover.py  test_memory.py  test_persona_wizard.py  test_provider_fallback.py  test_providers.py  test_security.py  test_token_tracker.py  test_tools.py  test_vector.py
